# fad

./: .gitignore  LICENSE  README.md  pyproject.toml
fad/: __init__.py  anamoly_utils.py  anomaly_utils.py  constants.py  financial_ad.py
